<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/greyBackground">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:context=".MovieDetailsActivity"
        android:descendantFocusability="blocksDescendants"
        >


        <TextView
            android:id="@+id/original_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/original_title"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/original_title_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/poster_thumbnail"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="196dp"
                android:layout_gravity="left"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/poster_thumbnail" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/trailer_rv"
                    android:layout_height="100dp"
                    android:layout_width="match_parent"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mark_favorite"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    />
                <CheckBox
                    android:id="@+id/favorite_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:visibility="visible"
                    android:contentDescription="@string/star"
                    style="?android:attr/starStyle" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/user_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_rating"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_rating_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/release_date_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                     />
            </LinearLayout>

        </LinearLayout>

            <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/overview"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/overview_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/user_reviews"
            android:textStyle="bold"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/user_reviews_rv"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"/>

    </LinearLayout>
</ScrollView>